feat: override gates/doors

--- a/Scripts/Tests/Editor/Guribo.UdonBetterAudio.Tests.Editor.asmdef
+++ b/Scripts/Tests/Editor/Guribo.UdonBetterAudio.Tests.Editor.asmdef
@@ -4,7 +4,9 @@
         "UdonSharp.Editor",
         "UdonSharp.Runtime",
         "Guribo.UdonBetterAudio",
-        "Guribo.UdonUtils"
+        "Guribo.UdonUtils",
+        "Guribo.UdonUtils.Tests.Editor",
+        "VRC.Udon"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
