fix: update on deserialization not working reliably

--- a/Tests/Editor/Guribo.UdonBetterAudio.Tests.Editor.asmdef
+++ b/Tests/Editor/Guribo.UdonBetterAudio.Tests.Editor.asmdef
@@ -6,7 +6,9 @@
         "Guribo.UdonBetterAudio.Runtime",
         "Guribo.UdonUtils.Runtime",
         "Guribo.UdonUtils.Tests.Editor",
-        "VRC.Udon"
+        "VRC.Udon",
+        "Guribo.UdonUtils.Editor",
+        "Guribo.UdonUtils.Tests.Runtime"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
