fix: missing assembly reference

--- a/Tests/Editor/Guribo.UdonBetterAudio.Tests.Editor.asmdef
+++ b/Tests/Editor/Guribo.UdonBetterAudio.Tests.Editor.asmdef
@@ -10,7 +10,9 @@
         "Guribo.UdonUtils.Editor",
         "Guribo.UdonUtils.Tests.Runtime"
     ],
-    "optionalUnityReferences": [],
+    "optionalUnityReferences": [
+        "TestAssemblies"
+    ],
     "includePlatforms": [
         "Editor"
     ],
